--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paint Clone</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png"
+        href="https://pl.gravatar.com/userimage/38519471/d27f42e60b69e1e9af62dae70243375b?size=200">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,14 +19,14 @@
         <!-- Brush -->
         <div class="brush tool">
             <i class="fas fa-brush" id="brush" title="Brush"></i>
-            <input type="color">
+            <input class="jscolor" id="brush-color" value="a51dab">
             <span class="size" id="brush-size" title="Brush Size">10</span>
             <input type="range" min="1" max="50" value="10" class="slider" id="brush-slider">
         </div>
         <!-- Bucket -->
         <div class="bucket tool">
             <i class="fas fa-fill-drip" title="Background Color"></i>
-            <input type="color">
+            <input class="jscolor" id="bucket-color" value="ffffff">
         </div>
         <!-- Eraser -->
         <div class="tool">
@@ -55,7 +56,13 @@
         </div>
     </div>
 
+    <!-- Mobile Message -->
+    <div class="mobile-message">
+        <h2>Please use the application on a larger screen</h2>
+    </div>
+
     <!-- Script -->
+    <script src="jscolor.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
